--- a/midland-bs-mannager/src/main/webapp/assets/plugins/jquery-file-upload/angularjs.html
+++ b/midland-bs-mannager/src/main/webapp/assets/plugins/jquery-file-upload/angularjs.html
@@ -132,7 +132,7 @@
                     <div class="progress progress-striped active fade" data-ng-class="{pending: 'in'}[file.$state()]" data-file-upload-progress="file.$progress()"><div class="progress-bar progress-bar-success" data-ng-style="{width: num + '%'}"></div></div>
                 </td>
                 <td>
-                    <button type="button" class="btn btn-primary start" data-ng-click="file.$submit()" data-ng-hide="!file.$submit">
+                    <button type="button" class="btn btn-primary start" data-ng-click="file.$submit()" data-ng-hide="!zfile.$submit">
                         <i class="glyphicon glyphicon-upload"></i>
                         <span>Start</span>
                     </button>
